Completely remove loading screen

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!-- Loading Screen'i kaldır -->
-<!-- <div class="loading-screen">
+<!-- Bu kısmı tamamen silin -->
+<div class="loading-screen">
     <div class="loader"></div>
-</div> --> 
+</div> 
