--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,19 @@
-<!-- Bu kısmı tamamen silin -->
-<div class="loading-screen">
-    <div class="loader"></div>
-</div> 
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zrox SMS - Güvenli ve Anonim SMS Bomber</title>
+    <link rel="icon" type="image/x-icon" href="static/icon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="static/icon.ico">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+</head>
+<body>
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+    <div class="particles-container" id="particles-js"></div>
+    
+    <!-- Diğer içerik aynı kalacak -->
+</body>
+</html> 
